--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "css-loader": "^0.28.7",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "normalize.css": "^7.0.0",
     "vue": "^2.5.13",
     "vue-loader": "^13.6.2",
